--- a/07_Electronic_Output_Devices/index.html
+++ b/07_Electronic_Output_Devices/index.html
@@ -21,6 +21,8 @@
 
   ##Part 1: Use Input and Output Devices Controlled by a Microcontroller Program with Class Structure
 
+  ###Code: 
+
   My goal for this week was to create a piezo buzzer that could play a complete octave of notes, with each note being controlled by a button. 
 
   I created class 'button' so I could then create endless objects of with required characteristics and play all the required notes. 
@@ -114,6 +116,14 @@ void loop() {
   
 }
 </code></pre> 
+
+###Circuit: 
+ 
+ For the circuit, I just wired 8 buttons to digital pins and wired the piezo to it's pin and ground. Here is what the final circuit looks like from a variety of angles: 
+
+<img src="IMG_6109.jpeg" alt="circuit" style="width:1500.5px;height:2003.5px;">
+<img src="IMG_6104.jpeg" alt="circuit" style="width:1500.5px;height:2003.5px;">
+<img src="IMG_6025.JPG" alt="circuit" style="width:267px;height:200px;">
 
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
