--- a/07_Electronic_Output_Devices/index.html
+++ b/07_Electronic_Output_Devices/index.html
@@ -123,7 +123,11 @@ void loop() {
 
 <img src="IMG_6109.jpeg" alt="circuit" style="width:1500.5px;height:2003.5px;">
 <img src="IMG_6104.jpeg" alt="circuit" style="width:1500.5px;height:2003.5px;">
-<img src="IMG_6025.JPG" alt="circuit" style="width:267px;height:200px;">
+
+
+<video width="262" height="500" controls>
+<source src="272c58b8-79bb-4bca-a932-48488dc1ec6f-0-1f9699af-75d3-4570-9f23-146e883814a2.mp4" type="video/mp4">
+</video>
 
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
