--- a/07_Electronic_Output_Devices/index.html
+++ b/07_Electronic_Output_Devices/index.html
@@ -129,6 +129,36 @@ void loop() {
 <source src="272c58b8-79bb-4bca-a932-48488dc1ec6f-0-1f9699af-75d3-4570-9f23-146e883814a2.mp4" type="video/mp4">
 </video>
 
+##Part 2: Using an Oscilloscope to Analyze the Circuit
+
+### Time Domain & Fixed Clock & Speed: 
+
+####Time Domain: 
+A time domain is when there is something shown/evaluated as a function of time. The oscilloscope graph is in the time domain as it shows voltage as a function of time. 
+
+
+???SO THE TIME DOMAIN IS VOLTAGE????
+</br></br>
+####Speed: 
+The speed of my circuit is: 2.15436kHz - 6.34549kHz
+ - the speed varies because of the different frequencies the piezo plays 
+</br>
+This is as it says in the bottom right corner of the oscilloscope screen. Note that Hz = s^-1. 
+</br></br>
+####Fixed Clock:
+My circuit is a fixed clock. 
+</br>
+Clocks in electronics are signals that oscillate between a high and low state. Therefore, a fixed clock is a clock signal that oscillates at a constant frequency between it's two states. 
+</br></br>
+The signals being sent between the piezo and the computer are clock signals because each note causes them to oscillate at a constant frequency. 
+</br></br>
+This constant frequency can be seen in the images taken of the different notes, as each of the peaks are the same as their neighbours. 
+</br></br>
+###Images and Readings: 
+Here are all the images and videos referenced above. 
+- notice that when I press successively higher notes, the width of the square wave decreases
+
+
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
   And here is a [link](../index.html).
