--- a/07_Electronic_Output_Devices/index.html
+++ b/07_Electronic_Output_Devices/index.html
@@ -157,6 +157,18 @@ This constant frequency can be seen in the images taken of the different notes, 
 ###Images and Readings: 
 Here are all the images and videos referenced above. 
 - notice that when I press successively higher notes, the width of the square wave decreases
+- also, in the second section of the video I press on two notes at once- notice the change in the wavelength of the square wave, where again it shrinks as frequency increases. 
+
+<img src="IMG_6116.jpeg" alt="circuit" style="width:1500.5px;height:2003.5px;">
+<img src="IMG_6115.jpeg" alt="circuit" style="width:1500.5px;height:2003.5px;">
+<img src="IMG_6114.jpeg" alt="circuit" style="width:1500.5px;height:2003.5px;">
+<img src="IMG_6117.jpeg" alt="circuit" style="width:1500.5px;height:2003.5px;">
+<img src="IMG_6118.jpeg" alt="circuit" style="width:1500.5px;height:2003.5px;">
+
+
+<video width="262" height="500" controls>
+<source src="207484e3-bb76-4068-8f7c-c6fbd58b978d-0-0d540e91-0e88-43e9-899b-92f44661a280.mp4" type="video/mp4">
+</video>
 
 
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
