--- a/07_Electronic_Output_Devices/index.html
+++ b/07_Electronic_Output_Devices/index.html
@@ -19,6 +19,8 @@
 
   # Week 7: Electronic Output Devices
 
+[home](../index.html).
+
   ##Part 1: Use Input and Output Devices Controlled by a Microcontroller Program with Class Structure
 
   ###Code: 
@@ -170,10 +172,6 @@ Here are all the images and videos referenced above.
 <source src="207484e3-bb76-4068-8f7c-c6fbd58b978d-0-0d540e91-0e88-43e9-899b-92f44661a280.mp4" type="video/mp4">
 </video>
 
-
-  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
-
-  And here is a [link](../index.html).
 
 
 
