--- a/07_Electronic_Output_Devices/index.html
+++ b/07_Electronic_Output_Devices/index.html
@@ -172,6 +172,12 @@ Here are all the images and videos referenced above.
 <source src="207484e3-bb76-4068-8f7c-c6fbd58b978d-0-0d540e91-0e88-43e9-899b-92f44661a280.mp4" type="video/mp4">
 </video>
 
+##Part 3: Design for Next Week: CNC Milling, Molding and Casting
+
+I wanted to make a small puzzle with the CNC machins and so I designed the following in fusion 360: 
+
+<img src="assembled.JPEG" alt="circuit" style="width:264.6px;height:148px;">
+<img src="overheadview.JPEG" alt="circuit" style="width:325px;height:60.34px;">
 
 
 
