--- a/07_Electronic_Output_Devices/index.html
+++ b/07_Electronic_Output_Devices/index.html
@@ -176,6 +176,7 @@ Here are all the images and videos referenced above.
 
 I wanted to make a small puzzle with the CNC machins and so I designed the following in fusion 360: 
 
+<img src="sketch.JPEG" alt="circuit" style="width:297.4px;height:193px;">
 <img src="assembled.JPEG" alt="circuit" style="width:264.6px;height:148px;">
 <img src="overheadview.JPEG" alt="circuit" style="width:325px;height:157.8px;">
 
