--- a/07_Electronic_Output_Devices/index.html
+++ b/07_Electronic_Output_Devices/index.html
@@ -180,7 +180,7 @@ I wanted to make a small puzzle with the CNC machins and so I designed the follo
 <img src="assembled.JPEG" alt="circuit" style="width:264.6px;height:148px;">
 <img src="overheadview.JPEG" alt="circuit" style="width:325px;height:157.8px;">
 
-
+I'll start with these 2 pieces, and then expand depending on timing/results in class. 
 
 </xmp>
 </body>
