--- a/07_Electronic_Output_Devices/index.html
+++ b/07_Electronic_Output_Devices/index.html
@@ -137,10 +137,11 @@ void loop() {
 ### Time Domain & Fixed Clock & Speed: 
 
 ####Time Domain: 
-A time domain is when there is something shown/evaluated as a function of time. The oscilloscope graph is in the time domain as it shows voltage as a function of time. 
+A time domain is when there is something shown/evaluated as a function of time. So to find the time domain, we take 1/the speed value in kHz. 
 
+Calculation: 
+<img src="IMG_3280.jpeg" alt="circuit" style="width:288px;height:217.2px;">
 
-???SO THE TIME DOMAIN IS VOLTAGE????
 </br></br>
 ####Speed: 
 The speed of my circuit is: 2.15436kHz - 6.34549kHz
