--- a/07_Electronic_Output_Devices/index.html
+++ b/07_Electronic_Output_Devices/index.html
@@ -26,11 +26,11 @@
   ###Code: 
 
   My goal for this week was to create a piezo buzzer that could play a complete octave of notes, with each note being controlled by a button. 
-
+</br></br>
   I created class 'button' so I could then create endless objects of with required characteristics and play all the required notes. 
-
+</br></br>
   Then I made a custom function to play the correct note for the corresponding button. 
-
+</br></br>
   Here is the code for everything together: 
 
 
@@ -144,7 +144,7 @@ Calculation:
 
 </br></br>
 ####Speed: 
-The speed of my circuit is: 2.15436kHz - 6.34549kHz
+The speed of my circuit is: 2.15436kHz - 6.34549kHz</br>
  - the speed varies because of the different frequencies the piezo plays 
 </br>
 This is as it says in the bottom right corner of the oscilloscope screen. Note that Hz = s^-1. 
@@ -159,8 +159,8 @@ The signals being sent between the piezo and the computer are clock signals beca
 This constant frequency can be seen in the images taken of the different notes, as each of the peaks are the same as their neighbours. 
 </br></br>
 ###Images and Readings: 
-Here are all the images and videos referenced above. 
-- notice that when I press successively higher notes, the width of the square wave decreases
+Here are all the images and videos referenced above. </br>
+- notice that when I press successively higher notes, the width of the square wave decreases</br>
 - also, in the second section of the video I press on two notes at once- notice the change in the wavelength of the square wave, where again it shrinks as frequency increases. 
 
 <img src="IMG_6116.jpeg" alt="circuit" style="width:401.7px;height:301.7px;">
