--- a/07_Electronic_Output_Devices/index.html
+++ b/07_Electronic_Output_Devices/index.html
@@ -137,7 +137,7 @@ void loop() {
 ### Time Domain & Fixed Clock & Speed: 
 
 ####Time Domain: 
-A time domain is when there is something shown/evaluated as a function of time. So to find the time domain, we take 1/the speed value in kHz. 
+A time domain is when there is something shown/evaluated as a function of time. So to find the time domain, we take 1/(the speed value in kHz). 
 
 Calculation: 
 <img src="IMG_3280.jpeg" alt="circuit" style="width:288px;height:217.2px;">
