--- a/07_Electronic_Output_Devices/index.html
+++ b/07_Electronic_Output_Devices/index.html
@@ -146,8 +146,8 @@ Calculation:
 ####Speed: 
 The speed of my circuit is: 2.15436kHz - 6.34549kHz</br>
  - the speed varies because of the different frequencies the piezo plays 
-</br>
-This is as it says in the bottom right corner of the oscilloscope screen. Note that Hz = s^-1. 
+</br></br>
+These values were taken from the bottom right corner of the oscilloscope screen. Note that Hz = s^-1. 
 </br></br>
 ####Fixed Clock:
 My circuit is a fixed clock. 
