--- a/08_CNC_Milling,_Molding_&_Casting/index.html
+++ b/08_CNC_Milling,_Molding_&_Casting/index.html
@@ -12,7 +12,18 @@
 
 
 
-  ### Week 8: CNC Milling, Molding, and Casting 
+  # Week 8: CNC Milling, Molding, and Casting 
+
+## Milling: 
+
+For the milling, I first created a model in fusion 360 of the model I wanted to create. I made two, because I was unsure how much time it would take and wanted to be able to evaluate the situation before chosing which one to mill. 
+
+Here are the files: 
+
+[Sun Milling, Bigger Version](https://a360.co/3PCaIK6).
+[Sun Milling, Smaller Version](https://a360.co/3o6GZNY).
+
+I ended up chosing the smaller version becasue the larger one would have been far too time consuming. 
 
   Here is an image: 
 
