--- a/08_CNC_Milling,_Molding_&_Casting/index.html
+++ b/08_CNC_Milling,_Molding_&_Casting/index.html
@@ -18,16 +18,27 @@
 
 For the milling, I first created a model in fusion 360 of the model I wanted to create. I made two, because I was unsure how much time it would take and wanted to be able to evaluate the situation before chosing which one to mill. 
 
-Here are the files: 
+Here are the files and images of the designs: 
+
+<img src="homeview.jpeg" alt="home view" style="width:279px;height:203.25px;">
+
+<img src="topview.jpeg" alt="top view" style="width:230.5px;height:217.5px;">
 
 [Sun Milling, Bigger Version](https://a360.co/3PCaIK6).
 [Sun Milling, Smaller Version](https://a360.co/3o6GZNY).
 
 I ended up chosing the smaller version becasue the larger one would have been far too time consuming. 
 
-  Here is an image: 
+Here are images of the settings for the milling: 
 
-  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
+<img src="IMG_6159.jpeg" alt="settings" style="width:401px;height:300.4px;">
+
+Here are the results: 
+
+<img src="IMG_6159.jpeg" alt="settings" style="width:401px;height:300.4px;">
+
+
+  
 
   And here is a [link](../index.html).
 
