--- a/08_CNC_Milling,_Molding_&_Casting/index.html
+++ b/08_CNC_Milling,_Molding_&_Casting/index.html
@@ -35,7 +35,7 @@ Here are images of the settings for the milling:
 
 Here are the results: 
 
-<img src="IMG_6159.jpeg" alt="settings" style="width:401px;height:300.4px;">
+<img src="IMG_6183.jpeg" alt="milled result" style="width:401px;height:300.4px;">
 
 
   
