--- a/08_CNC_Milling,_Molding_&_Casting/index.html
+++ b/08_CNC_Milling,_Molding_&_Casting/index.html
@@ -36,9 +36,19 @@ Here are images of the settings for the milling:
 Here are the results: 
 
 <img src="IMG_6183.jpeg" alt="milled result" style="width:300.3px;height:400.4px;">
-3003 4004
 
+##Molding
+
+I created my molds using silicon. I mixed a 1:1 ratio of part A and part B, then stirred it until the colour was uniform, and then poured it into my mold. However, I had extra silicon and there was an Elmo carving in my block of waz so I also made an Elmo mold. I then let the mold set for 24 hours until the next lab session, although I doubt it needed that long. 
+
+Here are pitcures of the molds and the process: 
   
+<img src="IMG_6161.jpeg" alt="molding" style="width:300.1px;height:402px;">
+
+<img src="IMG_6176.jpeg" alt="sun mold" style="width:300.1px;height:400.2px;">
+
+<img src="IMG_6175.jpeg" alt="elmo mold" style="width:299.5px;height:402.6px;">
+
 
   And here is a [link](../index.html).
 
