--- a/08_CNC_Milling,_Molding_&_Casting/index.html
+++ b/08_CNC_Milling,_Molding_&_Casting/index.html
@@ -49,10 +49,22 @@ Here are pitcures of the molds and the process:
 
 <img src="IMG_6175.jpeg" alt="elmo mold" style="width:299.5px;height:402.6px;">
 
+##Casting
+
+I Ccasted my molds in chocolate, even though they weren't food grade. I used the raspberry chocolate, which I melted on the hot plate for a few minutes on 8 and 9, and then poured them into the molds. Then I let them set for an hour or two. Here are the results: 
+
+<img src="IMG_6177.jpeg" alt="sun casting in mold" style="width:302.2px;height:399.6px;">
+
+<img src="IMG_6179.jpeg" alt="elmo cast in mold" style="width:300.1px;height:400.2px;">
+
+<img src="IMG_6192.jpeg" alt="sun cast" style="width:299.5px;height:402.6px;">
+
+<img src="IMG_6191.jpeg" alt="both molds and casts" style="width:299.5px;height:402.6px;">
+
 
   And here is a [link](../index.html).
 
-
+3022 3996
 
 </xmp>
 </body>
