--- a/08_CNC_Milling,_Molding_&_Casting/index.html
+++ b/08_CNC_Milling,_Molding_&_Casting/index.html
@@ -62,9 +62,9 @@ I Ccasted my molds in chocolate, even though they weren't food grade. I used the
 <img src="IMG_6191.jpeg" alt="both molds and casts" style="width:299.5px;height:402.6px;">
 
 
-  And here is a [link](../index.html).
+  [home](../index.html).
 
-3022 3996
+
 
 </xmp>
 </body>
