--- a/09_Radio,_Wifi,_Bluetooth_IoT/WebInterface.html
+++ b/09_Radio,_Wifi,_Bluetooth_IoT/WebInterface.html
@@ -18,12 +18,12 @@
     <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-database.js"></script&gt;
 
     <script>
-    // Your web app's Firebase configuration
+    // Your web apps Firebase configuration
     var firebaseConfig = {
-        apiKey: "REPLACE_WITH_YOUR_OWN",
+        apiKey: "AIzaSyB-MQ3RS4p_Pt7wkeggaGYavKdU1ZEgM8w",
         authDomain: "REPLACE_WITH_YOUR_OWN",
-        databaseURL: "REPLACE_WITH_YOUR_OWN",
-        projectId: "REPLACE_WITH_YOUR_OWN",
+        databaseURL: " https://esp32-music-player-default-rtdb.firebaseio.com",
+        projectId: "esp32-music-player",
         storageBucket: "REPLACE_WITH_YOUR_OWN",
         messagingSenderId: "REPLACE_WITH_YOUR_OWN",
         appId: "REPLACE_WITH_YOUR_OWN"
@@ -42,14 +42,14 @@
     function turnOn(){
         console.log("turning on");
         ref.update({
-            "LED_STATUS": "ON"
+            "LED_STATUS": "MUSIC ON"
         });
     }
 
     function turnOff(){
         console.log("turning off");
         ref.update({
-            "LED_STATUS": "OFF"
+            "LED_STATUS": "MUSIC OFF"
         });
     }
     </script>
