--- a/09_Radio,_Wifi,_Bluetooth_IoT/WebInterface.html
+++ b/09_Radio,_Wifi,_Bluetooth_IoT/WebInterface.html
@@ -36,20 +36,20 @@
     var ref = firebase.database().ref("/");
 
     // make the buttons call the function below 
-    document.getElementById('turn-on').addEventListener('click', turnOn, false);
-    document.getElementById('turn-off').addEventListener('click', turnOff, false);
+    document.getElementById('turn-on-music').addEventListener('click', turnOn, false);
+    document.getElementById('turn-off-music').addEventListener('click', turnOff, false);
 
     function turnOn(){
         console.log("turning on");
         ref.update({
-            "LED_STATUS": "MUSIC ON"
+            "LED_STATUS": "ON"
         });
     }
 
     function turnOff(){
         console.log("turning off");
         ref.update({
-            "LED_STATUS": "MUSIC OFF"
+            "LED_STATUS": "OFF"
         });
     }
     </script>
