first text and links

--- a/09_Radio,_Wifi,_Bluetooth_IoT/index.html
+++ b/09_Radio,_Wifi,_Bluetooth_IoT/index.html
@@ -12,9 +12,11 @@
 
 
 
-  ### Week 9: Radio, Wifi, Bluetooth Iot
+  # Week 9: Radio, Wifi, Bluetooth Iot
 
-  Here is an image: 
+  ## Goal: 
+
+  To make an LED turn on and off via Bluetooth LE. I used the [example from class](https://nathanmelenbrink.github.io/lab/networking/huzzah3.html), and the [work of a past student](https://laurenbhr.github.io/PHYSCI-70/09_bluetooth/index.html) who provided me with the app and saved me a lot of frustration with the intricacies of hex and ASCII. 
 
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
