--- a/09_Radio,_Wifi,_Bluetooth_IoT/index.html
+++ b/09_Radio,_Wifi,_Bluetooth_IoT/index.html
@@ -5,6 +5,11 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/arduino-light.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/arduino.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+
 <body>
 
 
@@ -17,6 +22,98 @@
   ## Goal: 
 
   To make an LED turn on and off via Bluetooth LE. I used the [example from class](https://nathanmelenbrink.github.io/lab/networking/huzzah3.html), and the [work of a past student](https://laurenbhr.github.io/PHYSCI-70/09_bluetooth/index.html) who provided me with the app and saved me a lot of frustration with the intricacies of hex and ASCII. 
+
+  ## Code/Bluetooth Interface: 
+
+  I modified the code as specified by the tutorial, and then made it so that if you inputted the value '1' to the bluetooth, it would turn the LED on, and so that any other value would turn the LED off. I used the app recommended in the other students documentation, becasue I had tried two apps before and neither of them worked as advertised. The app is called LightBlue and I wholeheartedly recommend it. Below is my complete code, as well as screenshots from within LightBlue. 
+
+<pre><code class="language-arduino">
+/*
+            Based on Neil Kolban example for IDF: https://github.com/nkolban/esp32-snippets/blob/master/cpp_utils/tests/BLE%20Tests/SampleWrite.cpp
+            Ported to Arduino ESP32 by Evandro Copercini
+        */
+
+        #include <BLEDevice.h>
+        #include <BLEUtils.h>
+        #include <BLEServer.h>
+
+        // See the following for generating UUIDs:
+        // https://www.uuidgenerator.net/
+
+        #define SERVICE_UUID        "4fafc201-1fb5-459e-8fcc-c5c9c331914b"
+        #define CHARACTERISTIC_UUID "beb5483e-36e1-4688-b7f5-ea07361b26a8"
+
+        int LED_PIN = 5;
+        char LED_STATUS;
+
+        class MyCallbacks: public BLECharacteristicCallbacks {
+            void onWrite(BLECharacteristic *pCharacteristic) {
+              std::string value = pCharacteristic->getValue();
+
+              if (value.length() > 0) {
+                Serial.println("*********");
+                Serial.print("New value: ");
+                for (int i = 0; i < value.length(); i++)
+                  Serial.print(value[i]);
+
+                Serial.println();
+                Serial.println("*********");
+                for (int i = 0; i < value.length(); i++){
+                  LED_STATUS = value[i];
+                }
+              }
+            }
+        };
+
+        void setup() {
+          Serial.begin(115200);
+
+          Serial.println("1- Download and install an BLE scanner app in your phone");
+          Serial.println("2- Scan for BLE devices in the app");
+          Serial.println("3- Connect to MyESP32");
+          Serial.println("4- Go to CUSTOM CHARACTERISTIC in CUSTOM SERVICE and write something");
+          Serial.println("5- See the magic =)");
+
+          BLEDevice::init("MyESP32PK");
+          BLEServer *pServer = BLEDevice::createServer();
+
+          BLEService *pService = pServer->createService(SERVICE_UUID);
+
+          BLECharacteristic *pCharacteristic = pService->createCharacteristic(
+                                                 CHARACTERISTIC_UUID,
+                                                 BLECharacteristic::PROPERTY_READ |
+                                                 BLECharacteristic::PROPERTY_WRITE
+                                               );
+
+          pCharacteristic->setCallbacks(new MyCallbacks());
+
+          pCharacteristic->setValue("Hello World");
+          pService->start();
+
+          BLEAdvertising *pAdvertising = pServer->getAdvertising();
+          pAdvertising->start();
+
+          pinMode(LED_PIN, OUTPUT);
+          digitalWrite(LED_PIN, LOW);
+        }
+
+        void loop() {
+          // put your main code here, to run repeatedly:
+          int val = (int)LED_STATUS;  // cast the char* as an int 
+          if (val == 49)              // ASCII code for the number 1
+            digitalWrite(LED_PIN, HIGH);
+          else 
+            digitalWrite(LED_PIN, LOW);
+
+          delay(2000);
+        }
+
+</code></pre> 
+
+
+
+
+
 
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
