--- a/09_Radio,_Wifi,_Bluetooth_IoT/index.html
+++ b/09_Radio,_Wifi,_Bluetooth_IoT/index.html
@@ -29,7 +29,7 @@
 
 <pre><code class="language-arduino">
 /*
-            Based on Neil Kolban example for IDF: https://github.com/nkolban/esp32-snippets/blob/master/cpp_utils/tests/BLE%20Tests/SampleWrite.cpp
+Based on Neil Kolban example for IDF: https://github.com/nkolban/esp32-snippets/blob/master/cpp_utils/tests/BLE%20Tests/SampleWrite.cpp
             Ported to Arduino ESP32 by Evandro Copercini
         */
 
@@ -111,7 +111,11 @@
 </code></pre> 
 
 
-
+<img src="IMG_6202.jpeg" alt="LightBlue SS" style="width:232.6px;height:505.4px;">
+<img src="IMG_6115.jpeg" alt="circuit" style="width:401.7px;height:301.7px;">
+<img src="IMG_6114.jpeg" alt="circuit" style="width:401.7px;height:301.7px;">
+<img src="IMG_6117.jpeg" alt="circuit" style="width:401.7px;height:301.7px;">
+<img src="IMG_6118.jpeg" alt="circuit" style="width:401.7px;height:301.7px;">
 
 
 
