--- a/09_Radio,_Wifi,_Bluetooth_IoT/index.html
+++ b/09_Radio,_Wifi,_Bluetooth_IoT/index.html
@@ -112,16 +112,19 @@ Based on Neil Kolban example for IDF: https://github.com/nkolban/esp32-snippets/
 
 
 <img src="IMG_6202.jpeg" alt="LightBlue SS" style="width:232.6px;height:505.4px;">
-<img src="IMG_6114.jpeg" alt="circuit" style="width:401.7px;height:301.7px;">
-<img src="IMG_6117.jpeg" alt="circuit" style="width:401.7px;height:301.7px;">
-<img src="IMG_6118.jpeg" alt="circuit" style="width:401.7px;height:301.7px;">
 
 ## Circuit Diagram
 
 I used an uno in place of the ESP32 because tinkerCAD doesn't have an ESP32. :(
+
+Here is the diagram: 
 <img src="circuitdiagram.jpeg" alt="circuit" style="width:401.7px;height:301.7px;">
 
 ## Videos of Final Product
+
+<video width="262" height="500" controls>
+<source src="a3c2a494-2851-41be-8c79-7d054d213acc-0-77337197-906b-4132-a820-bf53d64b388a.mp4" type="video/mp4">
+</video>
 
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
