--- a/09_Radio,_Wifi,_Bluetooth_IoT/index.html
+++ b/09_Radio,_Wifi,_Bluetooth_IoT/index.html
@@ -120,7 +120,7 @@ I used an uno in place of the ESP32 because tinkerCAD doesn't have an ESP32. :(
 Here is the diagram: 
 <img src="circuitdiagram.jpeg" alt="circuit" style="width:401.7px;height:301.7px;">
 
-## Videos of Final Product
+## Video of Final Product
 
 <video width="262" height="500" controls>
 <source src="a3c2a494-2851-41be-8c79-7d054d213acc-0-77337197-906b-4132-a820-bf53d64b388a.mp4" type="video/mp4">
