--- a/09_Radio,_Wifi,_Bluetooth_IoT/index.html
+++ b/09_Radio,_Wifi,_Bluetooth_IoT/index.html
@@ -126,9 +126,8 @@ Here is the diagram:
 <source src="a3c2a494-2851-41be-8c79-7d054d213acc-0-77337197-906b-4132-a820-bf53d64b388a.mp4" type="video/mp4">
 </video>
 
-  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
-
-  And here is a [link](../index.html).
+  
+[home](../index.html).
 
 
 
