--- a/09_Radio,_Wifi,_Bluetooth_IoT/index.html
+++ b/09_Radio,_Wifi,_Bluetooth_IoT/index.html
@@ -122,10 +122,13 @@ Here is the diagram:
 
 ## Video of Final Product
 
+Video: 
 <video width="262" height="500" controls>
 <source src="a3c2a494-2851-41be-8c79-7d054d213acc-0-77337197-906b-4132-a820-bf53d64b388a.mp4" type="video/mp4">
 </video>
 
+Image of Serial Monitor: 
+<img src="Screenshot2022-07-20at4.27.18 PM.jpeg" alt="serial monitor" style="width:409px;height:316.5px;">
   
 [home](../index.html).
 
