--- a/10_Machine_Building_and_End_Effectors/index.html
+++ b/10_Machine_Building_and_End_Effectors/index.html
@@ -12,11 +12,28 @@
 
 
 
-  ### Week 10: Machine Building and End Effectors
+  # Week 10: Machine Building and End Effectors
 
-  Here is an image: 
+  ## Goal: Build a conveyer belt (translate rotational motion to angular motion)
+
+  ### Circuit: 
+
+  I made the following circuit to power the stepper motor: 
+
+  *the wiring and diagram were taken from the page in the [class website](https://nathanmelenbrink.github.io/lab/machine/drv8834.html) for my motor driver, the DRV8834.
+
+Diagram:
+<img src="Driver.png" alt="circuitdiagram" style="width:598px;height:273px;">
+
+Actualized: 
+
+<img src="IMG_6223.jpeg" alt="circuitpic" style="width:570.5px;height:5544.25px;">
+
+
 
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
+
+
 
   And here is a [link](../index.html).
 
