--- a/10_Machine_Building_and_End_Effectors/index.html
+++ b/10_Machine_Building_and_End_Effectors/index.html
@@ -50,7 +50,11 @@ The belt is made of a thinly sliced piece of lined paper, reinforced with scotch
 
 I then assembled the pieces using hot glue, and threaded the belt around the pulleys and attached it to itself using some more scotch tape. 
 
-Here are images of the final result: 
+Here are images of the process and final result: 
+
+<video width="262" height="500" controls>
+<source src="1b3099d7-3e4d-4217-99d3-7a02c138ea8c-1-9273ea7a-6a83-477a-97c0-74206419d3f3" type="video/mp4">
+</video>
 
 PICTURES HERE 
 
@@ -93,6 +97,17 @@ void loop()
 
 </code></pre> 
 
+### Calibration: 
+
+*Ask suvin again if this is enough 
+
+### Final Product: 
+
+Here is a video of the final result!
+
+<video width="262" height="500" controls>
+<source src="afd2d07f-3360-448a-8496-6b51f50ae522-0-a798b928-e447-41dc-bdd1-412a415bf1e1.mp4" type="video/mp4">
+</video>
 
   ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
