--- a/10_Machine_Building_and_End_Effectors/index.html
+++ b/10_Machine_Building_and_End_Effectors/index.html
@@ -53,7 +53,7 @@ I then assembled the pieces using hot glue, and threaded the belt around the pul
 Here are images of the process and final result: 
 
 <video width="262" height="500" controls>
-<source src="1b3099d7-3e4d-4217-99d3-7a02c138ea8c-1-9273ea7a-6a83-477a-97c0-74206419d3f3" type="video/mp4">
+<source src="1b3099d7-3e4d-4217-99d3-7a02c138ea8c-1-9273ea7a-6a83-477a-97c0-74206419d3f3.mp4" type="video/mp4">
 </video>
 
 PICTURES HERE 
