--- a/10_Machine_Building_and_End_Effectors/index.html
+++ b/10_Machine_Building_and_End_Effectors/index.html
@@ -40,9 +40,9 @@ I used carboard, mostly cut with exacto knives to build the conveyor belt. I cut
 
 However, I laser cut the circles that are stuck on the sides of the foam. Their function is to prevent the belt from escaping it's bounds and disturbing the belt's motion. Here are links to the file I used to design them, and screenshots of the sketches: 
 
-LINK HERE
+<img src="circles.jpeg" alt="circuitpic" style="width:692px;height:362px;">
 
-PICTURE HERE 
+[File Link](https://a360.co/3PzuJ4z)
 
 The actual spinning pulleys are made of foam circles, with holes in the center. The first has a hole that attaches it to the spinning arm of the stepper motor, and the second has a small hole through the middle that I threaded armature wire through to attach it to the base.
 
