--- a/10_Machine_Building_and_End_Effectors/index.html
+++ b/10_Machine_Building_and_End_Effectors/index.html
@@ -56,7 +56,10 @@ Here are images of the process and final result:
 <source src="1b3099d7-3e4d-4217-99d3-7a02c138ea8c-1-9273ea7a-6a83-477a-97c0-74206419d3f3.mp4" type="video/mp4">
 </video>
 
-PICTURES HERE 
+<img src="IMG_6225.jpeg" alt="circuitpic" style="width:401.5px;height:300.8px;">
+<img src="IMG_6218.jpeg" alt="circuitpic" style="width:401.7px;height:300.2px;">
+<img src="IMG_6224.jpeg" alt="circuitpic" style="width:400.1px;height:300.8px;">
+<img src="IMG_6217.jpeg" alt="circuitpic" style="width:301.8px;height:402.6px;">
 
 ### Code: 
 
