--- a/10_Machine_Building_and_End_Effectors/index.html
+++ b/10_Machine_Building_and_End_Effectors/index.html
@@ -112,11 +112,8 @@ Here is a video of the final result!
 <source src="afd2d07f-3360-448a-8496-6b51f50ae522-0-a798b928-e447-41dc-bdd1-412a415bf1e1.mp4" type="video/mp4">
 </video>
 
-  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
 
-
-
-  And here is a [link](../index.html).
+[home](../index.html).
 
 
 
