--- a/10_Machine_Building_and_End_Effectors/index.html
+++ b/10_Machine_Building_and_End_Effectors/index.html
@@ -102,7 +102,9 @@ void loop()
 
 ### Calibration: 
 
-*Ask suvin again if this is enough 
+I added a pencil mark of the belt and then used that to track cycles of the machine. 
+
+**ON MONDAY, TIME THE CYCLES*
 
 ### Final Product: 
 
