--- a/10_Machine_Building_and_End_Effectors/index.html
+++ b/10_Machine_Building_and_End_Effectors/index.html
@@ -104,7 +104,7 @@ void loop()
 
 I added a pencil mark of the belt and then used that to track cycles of the machine. 
 
-**ON MONDAY, TIME THE CYCLES*
+To home it, you can manually reset the belt so that the mark is at the starting point (the side by the motor).
 
 ### Final Product: 
 
