--- a/11_Wildcard,_Macines/index.html
+++ b/11_Wildcard,_Macines/index.html
@@ -12,13 +12,26 @@
 
 
 
-  ### Week 11: Wildcard, Machines
+  # Week 11: Wildcard, Machines
 
-  Here is an image: 
+  ## Circuits:
 
-  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
+  Here are images of the iterations of the piano thus far: 
 
-  And here is a [link](../index.html).
+  1. One pin used for output, planar
+
+  <img src="IMG_6162.jpeg" alt="circuit1pic" style="width:301.1px;height:402.1px;">
+
+  2. 2 pins for output, stacked to fit dimensions of container
+
+  <img src="IMG_6300.jpeg" alt="circuit1pic" style="width:301.4px;height:401.9px;">
+
+  3. Mini breadboards for buttons, large one for associated wiring, two output pins to allow for the playing of two notes at once
+
+<img src="IMG_6313.jpeg" alt="circuit1pic" style="width:301.2px;height:401.9px;">
+
+DXF File:
+ [DXF File](https://a360.co/3PApYHY).
 
 
 
