--- a/11_Wildcard,_Macines/index.html
+++ b/11_Wildcard,_Macines/index.html
@@ -24,11 +24,11 @@
 
   2. 2 pins for output, stacked to fit dimensions of container
 
-  <img src="IMG_6300.jpeg" alt="circuit1pic" style="width:301.4px;height:401.9px;">
+  <img src="IMG_6300.jpeg" alt="circuit2pic" style="width:301.4px;height:401.9px;">
 
   3. Mini breadboards for buttons, large one for associated wiring, two output pins to allow for the playing of two notes at once
 
-<img src="IMG_6313.jpeg" alt="circuit1pic" style="width:301.2px;height:401.9px;">
+<img src="IMG_6313-1.jpeg" alt="circuit3pic" style="width:301.2px;height:401.9px;">
 
 DXF File:
  [DXF File](https://a360.co/3PApYHY).
