--- a/11_Wildcard,_Macines/index.html
+++ b/11_Wildcard,_Macines/index.html
@@ -30,8 +30,15 @@
 
 <img src="IMG_6313-1.jpeg" alt="circuit3pic" style="width:301.2px;height:401.9px;">
 
-DXF File:
+## Code: 
+
+## Files and Relevant Tutorials:
+
+Laser Cutting File:
  [DXF File](https://a360.co/3PApYHY).
+
+Playing Two Notes at Once: 
+ [Arduino Tutorial](https://arduino.stackexchange.com/questions/32926/multiple-tones-with-one-piezo-buzzer).
 
 
 
