--- a/11_Wildcard,_Macines/index.html
+++ b/11_Wildcard,_Macines/index.html
@@ -19,6 +19,8 @@
 
   # Week 11: Wildcard, Machines
 
+The assignment this week was to document process on my final project- here it is: 
+
   ## Circuits:
 
   Here are images of the iterations of the piano thus far: 
