--- a/11_Wildcard,_Macines/index.html
+++ b/11_Wildcard,_Macines/index.html
@@ -37,7 +37,7 @@ The assignment this week was to document process on my final project- here it is
 
 <img src="IMG_6313-1.jpeg" alt="circuit3pic" style="width:301.2px;height:401.9px;">
 
-4. Keys laser cut and attached, and the overhang attached as well. All assembled using hot clue. The keys and overhang were attached to the body of the piano with hinges to allow easy access to the wiring. 
+4. Keys and overhang laser cut and attached to the rest of the piano using hot glue. The keys and overhang were attached to the body of the piano with hinges to allow easy access to the wiring. 
 
 <img src="IMG_6321.jpeg" alt="circuit4pic" style="width:301.8px;height:401.5px;">
 <img src="IMG_6336.jpeg" alt="circuit4pic" style="width:401.6px;height:300.5px;">
