--- a/11_Wildcard,_Macines/index.html
+++ b/11_Wildcard,_Macines/index.html
@@ -49,6 +49,7 @@ The fifth iteration, created after all the code and wiring is finalized, will in
 
 Here is the most up to date code for the project as of July 27th. There are still various bugs in it that I am working on solving, such as getting it to stop playing the second of two notes played simultaneously once the button is released. 
 
+I'm also working on getting prgram interrupts to work so that the buzzer will respond faster to the buttons being pressed. 
 <pre><code class="language-arduino">
 
 // Author: Abi Adam
@@ -194,6 +195,8 @@ int chordN2;
 
 Laser Cutting File:
  [DXF File](https://a360.co/3PApYHY).
+ [DXF Addition File (to correct mistakes in the first cut)](https://a360.co/3oyetF5).
+
 
 Playing Two Notes at Once: 
  [Arduino Tutorial](https://arduino.stackexchange.com/questions/32926/multiple-tones-with-one-piezo-buzzer).
