--- a/11_Wildcard,_Macines/index.html
+++ b/11_Wildcard,_Macines/index.html
@@ -193,13 +193,13 @@ int chordN2;
 
 ## Files and Relevant Tutorials:
 
-Laser Cutting File:
+Laser Cutting File: </br>
  [DXF File](https://a360.co/3PApYHY).
 </br>
  [DXF Addition File (to correct mistakes in the first cut)](https://a360.co/3oyetF5).
 
 
-Playing Two Notes at Once: 
+Playing Two Notes at Once: </br>
  [Arduino Tutorial](https://arduino.stackexchange.com/questions/32926/multiple-tones-with-one-piezo-buzzer).
 
 
