--- a/11_Wildcard,_Macines/index.html
+++ b/11_Wildcard,_Macines/index.html
@@ -25,23 +25,22 @@ The assignment this week was to document process on my final project- here it is
 
   Here are images of the iterations of the piano thus far: 
 
-  1. One pin used for output, planar
+  1. One pin used for output, and there are multiple breadboard all lying in the same plane.
 
   <img src="IMG_6162.jpeg" alt="circuit1pic" style="width:301.1px;height:402.1px;">
 
-  2. 2 pins for output, stacked to fit dimensions of container
+  2. 2 pins for output (so it can play multiple notes at once), and the breadboards are stacked to fit dimensions of container
 
   <img src="IMG_6300.jpeg" alt="circuit2pic" style="width:301.4px;height:401.9px;">
 
-  3. Mini breadboards for buttons, large one for associated wiring, two output pins to allow for the playing of two notes at once
+  3. There are mini breadboards for the buttons, and a large one for the associated wiring. It still has the two output pins to allow for the playing of two notes at once. At this point, it's just held together by clay so I can assemble and dissasemble it at will.
 
 <img src="IMG_6313-1.jpeg" alt="circuit3pic" style="width:301.2px;height:401.9px;">
 
-4. Keys and overhang laser cut and attached to the rest of the piano using hot glue. The keys and overhang were attached to the body of the piano with hinges to allow easy access to the wiring. 
+4. I laser cut the keys and overhang and attached them to the rest of the piano using hot glue. The keys and overhang are attached to the body of the piano with hinges to allow easy access to the wiring. 
 
 <img src="IMG_6321.jpeg" alt="circuit4pic" style="width:301.8px;height:401.5px;">
 <img src="IMG_6336.jpeg" alt="circuit4pic" style="width:401.6px;height:300.5px;">
-
 
 The fifth iteration, created after all the code and wiring is finalized, will include sidings to enclose the breadboard. 
 
