--- a/11_Wildcard,_Macines/index.html
+++ b/11_Wildcard,_Macines/index.html
@@ -33,11 +33,11 @@ The assignment this week was to document process on my final project- here it is
 
   <img src="IMG_6300.jpeg" alt="circuit2pic" style="width:301.4px;height:401.9px;">
 
-  3. There are mini breadboards for the buttons, and a large one for the associated wiring. It still has the two output pins to allow for the playing of two notes at once. At this point, it's just held together by clay so I can assemble and dissasemble it at will.
+  3. I laser cut the body of the piano and assembled it using clay so I can assemble and dissasemble it at will. There are mini breadboards for the buttons, and a large one for the associated wiring. It still has the two output pins to allow for the playing of two notes at once.
 
 <img src="IMG_6313-1.jpeg" alt="circuit3pic" style="width:301.2px;height:401.9px;">
 
-   4. I laser cut the keys and overhang and attached them to the rest of the piano using hot glue. The keys and overhang are attached to the body of the piano with hinges to allow easy access to the wiring. 
+   4. I laser cut the acrylic and cardboard components of thekeys and attached them to the rest of the piano using hot glue. The keys and overhang are attached to the body of the piano with hinges to allow easy access to the wiring. 
 
 <img src="IMG_6321.jpeg" alt="circuit4pic" style="width:301.8px;height:401.5px;">
 <img src="IMG_6336.jpeg" alt="circuit4pic" style="width:401.6px;height:300.5px;">
