--- a/11_Wildcard,_Macines/index.html
+++ b/11_Wildcard,_Macines/index.html
@@ -190,6 +190,16 @@ int chordN2;
 
 </code></pre> 
 
+##Current Capabilities: 
+
+<video width="405" height="228.5" controls>
+<source src="55bdf20e-b623-4bf4-b7c0-edf2983dc988-0-e6f8a9f3-ee57-4c5d-a9f8-400a4189c924.mp4" type="video/mp4">
+</video>
+
+<video width="405" height="228.5" controls>
+<source src="9416a025-cc0f-4e7c-a9d3-f69baeb6c6c5-1-e6f8a9f3-ee57-4c5d-a9f8-400a4189c924.mp4" type="video/mp4">
+</video>
+
 ## Files and Relevant Tutorials:
 
 Laser Cutting File: </br>
