--- a/11_Wildcard,_Macines/index.html
+++ b/11_Wildcard,_Macines/index.html
@@ -41,6 +41,9 @@ The assignment this week was to document process on my final project- here it is
 
 <img src="IMG_6321.jpeg" alt="circuit4pic" style="width:301.8px;height:401.5px;">
 <img src="IMG_6336.jpeg" alt="circuit4pic" style="width:401.6px;height:300.5px;">
+<video width="405" height="228.5" controls>
+<source src="98212fd3c-ae5e-4082-a6e9-6dd927d3b124-0-e79af379-d0a5-48cb-8328-cc192ff02cfa.mp4" type="video/mp4">
+</video>
 
 The fifth iteration, created after all the code and wiring is finalized, will include sidings to enclose the breadboard. 
 
