--- a/12_Project_Prep_lab/index.html
+++ b/12_Project_Prep_lab/index.html
@@ -14,11 +14,10 @@
 
   ### Week 12: Project Prep lab
 
-  Here is an image: 
+  See the Final Project page for the documentation of work done this week. 
 
-  ![image of hydrangea](./Hydrangea-PNG-Transparent-Picture.png)
-
-  And here is a [link](../index.html).
+  [Final Project Page](https://abiadam.github.io/PHYS-S-12/13_Final_Project/index.html).
+  [home](../index.html).
 
 
 
