--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
    <div class="row">
     <div class="col-sm-4">
        <img src="YellowSunflower.jpg" alt="yellow sunflower image" style="width:350px;height:300px;">
-      [Week 13: Final Project Plans](./13_Final_Project_Plans/index.html)
+      [Week 13: Final Project Plans and Creation](./13_Final_Project_Plans/index.html)
     </div>
     <div class="col-sm-4">
      <img src="OrangeFlower1.jpg" alt="orange flower image" style="width:350px;height:300px;">
@@ -89,7 +89,7 @@
     </div>
     <div class="col-sm-4">
       <img src="Hydrangea-PNG-Transparent-Picture.png" alt="hydrangea image" style="width:350px;height:300px;">
-      [Miscellaneous]
+      [Final Project](./Final_Project/index.html)
     </div>
   </div>
 
