--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -12,19 +12,42 @@
 
   # Week 13: Final Project
 
+## MiniPiano
+
 ## Demo Video: 
 
 ## Purpose:
 
+I chose to make the MiniPiano because I believe that music should be more accessible and portable. Pianos and keyboards are so large and it is incredibly impracticle to move them around, and it can even be difficult to find somewhere to place them. The MiniPiano is small, portable, and fits easily wherever one wants to put it. It is perfect for practicing and just having fun with simple pieces of music. 
+
+Above all, the MiniPiano was created to enable more people to explore music in a convenient way before diving in. 
+
+It is also aesthetically pleasing and will look cool, doubling as a decorative piece.
+
 ## Mechanism:
+
+The MiniPiano is operated by eight keys, connected to the body of the piano. When pushed, each key triggers a button that sends a signal to the computer. Based on which button sent the signal, the computer tells the buzzer to play a specific note. By using a variety of different functions, the piano is capable of playing multiple notes at once and responding quickly to changes in the state of the buttons. The code is included in full below, and so are all the files used to manufacture the MiniPiano. There is also a CAD model of the body of the piano and circuit diagrams below. 
 
 ## Code: 
 
+*PUT FINAL VERSION HERE*
+
+## Circuit Diagram:
+
 ## Files: 
+
+Laser Cutting File: </br>
+ [DXF File](https://a360.co/3PApYHY).
+</br>
+ [DXF Addition File (to correct mistakes in the first cut)](https://a360.co/3oyetF5).
+ </br>
+ CAD MODEL OF CASING HERE
+
 
 ## Tutorials/Resources:
 
-
+Playing Two Notes at Once: </br>
+ [Arduino Tutorial](https://arduino.stackexchange.com/questions/32926/multiple-tones-with-one-piezo-buzzer).
   
 
   
