--- a/13_Final_Project_Plans/index.html
+++ b/13_Final_Project_Plans/index.html
@@ -20,7 +20,7 @@
 
   A musical instrument built using photoresistors/thermistors to detect the location of the user's fingers, allowing them to play varied notes without needing to touch an instrument. They would be able to play chords and varying intensities of the notes. The instrument would also be able to change octaves and have a display to show the user what chord/note they are playing. 
 
-  Here are some (very simple) illustration of what I hope to create: 
+  Here are some (very simple) illustrations of what I hope to create: 
 
   <img src="IMG_3274.jpeg" alt="overhead sketches" style="width:1373px;height:242px;">
   <img src="IMG_3273.jpeg" alt="overhead sketches" style="width:1415px;height:298px;">
@@ -115,6 +115,8 @@ Here are the links to the models, as well as screenshots of them:
 [Main Casing, with hole for octave changer button](https://a360.co/3O63rS0) <br/>
 [Key Component](https://a360.co/3ySWgYS)<br/>
 [7 Segment Display Casing (will be attached to the overall casing)](https://a360.co/3bY1eKJ)
+
+#These are the initial plans I made for this project, to see the process of actually building it see the [Week 11 page](https://abiadam.github.io/PHYS-S-12/11_Wildcard,_Macines/index.html)
 
 
 <img src="Casing1.jpeg" alt="main casing" style="width:682px;height:424.5px;">
