--- a/13_Final_Project_Plans/index.html
+++ b/13_Final_Project_Plans/index.html
@@ -14,7 +14,7 @@
 
   # Week 13: Final Project
 
-  
+  ###These are the initial plans I made for this project, to see the process of actually building it see the [Week 11 page](https://abiadam.github.io/PHYS-S-12/11_Wildcard,_Macines/index.html)
 
   ## Pressure operated musical instrument
 
@@ -115,8 +115,6 @@ Here are the links to the models, as well as screenshots of them:
 [Main Casing, with hole for octave changer button](https://a360.co/3O63rS0) <br/>
 [Key Component](https://a360.co/3ySWgYS)<br/>
 [7 Segment Display Casing (will be attached to the overall casing)](https://a360.co/3bY1eKJ)
-
-#These are the initial plans I made for this project, to see the process of actually building it see the [Week 11 page](https://abiadam.github.io/PHYS-S-12/11_Wildcard,_Macines/index.html)
 
 
 <img src="Casing1.jpeg" alt="main casing" style="width:682px;height:424.5px;">
